# h-scheme

./: .gitignore  README.md  TestTokenizer.hs  run_tests.hs  run_tests.sh  scheme.cabal  test_output2.txt  test_simple.scm
examples/: basic.scm  functions.scm  optimization_demo.scm
src/: Main.hs  Scheme.hs
src/Scheme/: Builtins.hs  Core.hs  DefineHandler.hs  Environment.hs  Evaluator.hs  FreeVars.hs  Parser.hs
tests/: README.md  basic_tests.scm  begin_define_test.scm  begin_test.scm  comment_test.scm  debug_begin.scm  debug_define.scm  debug_func.scm  debug_parse.scm  parse_begin.scm  parse_debug.scm  parse_test.scm  parser_comment_tests.hs  parser_comment_tests.scm  parser_tests.hs  partial_test.scm  regression_tests.scm  run_tests.hs  simple_begin.scm  simple_begin_test.scm  simple_define_test.scm  simple_func.scm  simple_test.scm  token_test.scm
