cabal-version:      3.0
name:               scheme
version:            1.0.0.0
license:            MIT
author:             Scheme Interpreter
maintainer:         scheme@example.com
build-depends:      base
                  , text
                  , parsec
                  , containers
default-language:   Haskell2010
ghc-options:        -Wall -Wcompat -Widentities -Wincomplete-record-updates
                   -Wincomplete-uni-patterns -Wmissing-export-lists
                   -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints

executable scheme
    main-is:         Main.hs
    hs-source-dirs:  src
    default-language: Haskell2010
    build-depends:   base
                   , text
                   , parsec
                   , containers 